objects/Work_Item__c.object
<CustomObject>
    <description>The work items of a sprint.</description>
    <label>Work Item</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Work Items</relationshipLabel>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <inlineHelpText>Valid values (1, 2, 3, 5, 8 and 13).</inlineHelpText>
        <label>Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Valid_Story_Points</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
Story_Points__c &lt;&gt; 1,
Story_Points__c &lt;&gt; 2,
Story_Points__c &lt;&gt; 3,
Story_Points__c &lt;&gt; 5,
Story_Points__c &lt;&gt; 8,
Story_Points__c &lt;&gt; 13
)</errorConditionFormula>
        <errorDisplayField>Story_Points__c</errorDisplayField>
        <errorMessage>Invalids values. Valid values are (1, 2, 3, 5, 8 and 13).</errorMessage>
    </validationRules>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>